<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Reto2</string>

    <string name="error_communication">Error de comunicacion</string>
    <string name="registradocorrectamente">Error de comunicacion</string>

    <string name="email">Email</string>
    <string name="Contraseña">Contraseña</string>
    <string name="recordarSesion">Recuerdame</string>
    <string name="Iniciar">Iniciar sesion</string>
    <string name="Register">Registrarse</string>
    <string name="cambiarIdioma">Idioma</string>
    <string name="Return" translatable="false">Volver</string>
    <string name="PassReseteada" translatable="false">Contraseña actualizada</string>
    <string name="BtnReset" translatable="false">Reset</string>

    <string name="es">Español</string>
    <string name="en">Ingles</string>
    <string name="eu">Euskera</string>

    <string name="EditPass">Editar Contraseña</string>
    <string name="Nombre">Nombre</string>
    <string name="Horario">Horario</string>
    <string name="Nivel">Nivel</string>
    <string name="Profesor">Profesor</string>
    <string name="Lugar">Lugar</string>
    <string name="MateriasAsistidas">Materias asistidas:</string>
    <string name="Salir">Salir</string>
    <string name="Email">Email</string>
    <string name="RContraseña">Repite la contraseña</string>
    <string name="Cancelar">Cancelar</string>
    <string name="ContraseñaAc">Contraseña actual</string>
    <string name="ContraseñaNu">Contraseña nueva</string>
    <string name="RepContraNu">Repite tu nueva contraseña nueva</string>
    <string name="VerMaterias">Ver Listado de materias</string>
    <string name="comerror">Error de comuncacion</string>
    <string name="Eliminar_materia">Eliminar materia</string>
    <string name="error">Error!</string>
    <string name="errorInicioSesion">Error en el Inicio de Sesion</string>

</resources>